syntax = "proto3";
package userService;
option go_package = "user-service/userService";

message User {
    int32 id = 1;
    string login = 2;
}

message UserRequest {
    int32 id = 1;
}

message Token {
    string token = 1;
}

service UserService {
    rpc GetUserByToken(Token) returns (User);
    rpc GetUserById(stream UserRequest) returns (stream User);
}